fix: Make all h2 elements left-aligned

--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,9 @@ body {
 
 h1, h2 {
   font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+h1 {
   text-align: center;
 }
 
